--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-netlify": "^1.0.21",
+    "gatsby-plugin-netlify-cache": "^0.1.0",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.47",
