--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "matrix-website",
+  "description": "matrixportfolio.com",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Mathew Chan <matt@matrixportfolio.com>",
   "dependencies": {
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-netlify": "^1.0.21",
     "gatsby-plugin-netlify-cache": "^0.1.0",
     "gatsby-plugin-react-helmet": "^2.0.10",
