--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Mathew Chan <matt@matrixportfolio.com>",
   "dependencies": {
     "gatsby": "^1.9.247",
+    "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-netlify": "^1.0.21",
@@ -16,6 +17,7 @@
     "gatsby-remark-images": "^1.5.66",
     "gatsby-source-filesystem": "^1.5.38",
     "gatsby-transformer-remark": "^1.7.42",
+    "gatsby-transformer-sharp": "^1.6.27",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
