--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "gatsby": "^1.9.247",
     "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.40",
-    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-netlify": "^1.0.21",
     "gatsby-plugin-netlify-cache": "^0.1.0",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.47",
+    "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-images": "^1.5.66",
     "gatsby-source-filesystem": "^1.5.38",
